--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ platformdirs==4.3.6
 virtualenv==20.29.2
 Werkzeug==3.1.3
 gunicorn==21.2.0
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.5.1
+xgboost==2.0.3
